# writer2

./: .dockerignore  .env  .env.dist  .gitignore  .mcp.json  CLAUDE.md  CURRENT_TASK.md  Dockerfile  ENDPOINT_INVENTORY.md  LICENSE  READER_SOLID_MIGRATION.md  README.md  SOLID_EDITOR_PLAN.md  STORAGE_FORMATS_COMPARISON.md  TODO.txt  UNIFICATION_PLAN.md  biome.json  convert.ts  docker-compose.prod.yml  drizzle.config.ts  middleware.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: release.yml  (+2 more)
apps/writer/src-tauri/: Cargo.toml  tauri.conf.json
apps/writer/src-tauri/icons/: icon.icns
apps/writer/src-tauri/migrations/: 0000_daffy_giant_man.sql
apps/writer/src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
apps/writer/src-tauri/src/: main.rs
components/: AiPopup.tsx  ArcTabs.tsx  AudioButton.tsx  Authenticated.tsx  AutoResizeTextarea.tsx  BookTabs.tsx  ChapterTabs.tsx  CharacterModal.tsx  CharacterPanel.tsx  FullChapter.tsx  HeaderMenu.tsx  LanguageForm.tsx  LanguageModal.tsx  LanguagePanel.tsx  NavItem.tsx  NavTree.tsx  NoStory.tsx  PageImage.tsx  Paragraph.tsx  PlotPointPanel.tsx  Preview.tsx  ReadHeaderMenu.tsx  SceneButtons.tsx  ScenePanel.tsx  SceneTabs.tsx  StoryNavigation.tsx  StoryPane.tsx  StoryPanel.tsx  StoryParagraphButtons.tsx  WriteHeaderMenu.tsx
lib/: ai-instructions.ts  persistence.ts  store.ts  trpc.ts
pages/: _app.tsx  characters.tsx  index.tsx  language.tsx  locations.tsx  plot-points.tsx  preview.tsx  settings.tsx
server/: context.ts  router.ts  trpc.ts
stories/: isekai.json  story.json
(+1307 files in other folders)
