[package]
name = "writer"
version = "1.0.1"
description = "A writing application for fiction"
authors = ["Bart riepe"]
license = "MIT"
repository = ""
default-run = "writer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.0.0-beta.18", features = [] }

[dependencies]
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-beta.10"
tauri-plugin-fs = "2.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2.0.0-beta.23", features = ["protocol-asset"] }
tauri-plugin-store = "2.0.0-beta.9"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]    # or "postgres", or "mysql"
version = "2.0.0-beta.8"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
